--- a/error.html
+++ b/error.html
@@ -3,12 +3,29 @@
 <head>
     <title>Gerador de CPF</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/all.css" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script type="text/javascript" src="jss/all.js"></script>
 </head>
 <body>
-    <div class="logo"></div>
-    <div class="login-block">
-        <h1>Erro - Tente novamente mais tarde</h1>
+    <div class="nav-container container">
+        <nav class="indigo lighten-1">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Gerador de CPF</a>
+            </div>
+        </nav>
+    </div>
+    <div class="container">
+        <div class="card horizontal">
+            <div class="card-stacked">
+                <div class="card-content center">
+                    <h3>Erro - Tente novamente mais tarde</h3>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         (function (i, s, o, g, r, a, m) {
